[package]
name = "keyboard-layer-cursor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
async-hid = { version = "0.4.2" }
futures-lite = "2.6.0"
softbuffer = "0.4.6"
tokio = { version = "1.43.0", features = [
  "time",
  "sync",
  "rt-multi-thread",
  "signal",
] }
windows = { version = "0.61.1", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Accessibility",
  "Win32_System_Console",
] }
wineventhook = "0.9.0"
winit = "0.30.9"
winsafe = { version = "0.0.24", features = ["user"] }
